@@ -1,3 +1,7 @@
+2007-11-11  Roland McGrath  <roland@frob.com>
+
+	* include/kernel-features.h: New file.
+
 2007-11-10  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/pthread/aio_misc.c (handle_fildes_io): Avoid unnecessary
